[metadata]
name = beetcave
author = Alan Privet
author-email = alannprivet@gmail.com
license = MIT
classifier =
  Development Status :: 4 - Beta
  Operating System :: OS Independent
  Programming Language :: Python
keywords =
  flask

[files]
packages =
  beetcave

[entry_points]
console_scripts =
  beetcave = beetcave.__main__:main
